--- a/KS_WALLCOVERINGS/index.html
+++ b/KS_WALLCOVERINGS/index.html
@@ -185,6 +185,11 @@
                                             <li><span>VELUCE</span></li>
                                             <li><span>E ROOM</span></li>
                                         </ul>
+                                        <ul class="info">
+                                            <li><em>3049-6,</em></li>
+                                            <li><em>THE VIEW,</em></li>
+                                            <li><em>fabric</em></li>
+                                        </ul>
                                     </div>
                                     <div class="photo">
                                         <img src="images/main/collection_1.png" alt="" class="pc">
@@ -206,6 +211,11 @@
                                             <li><span>THE VIEW</span></li>
                                             <li><span>VELUCE</span></li>
                                             <li><span>E ROOM</span></li>
+                                        </ul>
+                                        <ul class="info">
+                                            <li><em>3009-5,</em></li>
+                                            <li><em>THE HOME,</em></li>
+                                            <li><em>paint</em></li>
                                         </ul>
                                     </div>
                                     <div class="photo">
@@ -229,6 +239,11 @@
                                             <li class="active"><span>VELUCE</span></li>
                                             <li><span>E ROOM</span></li>
                                         </ul>
+                                        <ul class="info">
+                                            <li><em>93451-9,</em></li>
+                                            <li><em>VELUCE,</em></li>
+                                            <li><em>paint</em></li>
+                                        </ul>
                                     </div>
                                     <div class="photo">
                                         <img src="images/main/collection_3.png" alt="" class="pc">
@@ -251,6 +266,11 @@
                                             <li><span>VELUCE</span></li>
                                             <li><span>E ROOM</span></li>
                                         </ul>
+                                        <ul class="info">
+                                            <li><em>3009-25,</em></li>
+                                            <li><em>THE VIEW,</em></li>
+                                            <li><em>paint</em></li>
+                                        </ul>
                                     </div>
                                     <div class="photo">
                                         <img src="images/main/collection_4.png" alt="" class="pc">
@@ -272,6 +292,11 @@
                                             <li><span>THE VIEW</span></li>
                                             <li><span>VELUCE</span></li>
                                             <li class="active"><span>E ROOM</span></li>
+                                        </ul>
+                                        <ul class="info">
+                                            <li><em>2103-1,</em></li>
+                                            <li><em>E ROOM,</em></li>
+                                            <li><em>modern</em></li>
                                         </ul>
                                     </div>
                                     <div class="photo">
@@ -302,19 +327,25 @@
                     <img src="images/main/styling_8.png" alt="" class="style_8">
                 </div>
                 <div class="photos_m">
-                    <ul>
-                        <li><img src="images/main/styling_m_1.png" alt=""></li>
-                        <li><img src="images/main/styling_m_2.png" alt=""></li>
-                        <li><img src="images/main/styling_m_3.png" alt=""></li>
-                        <li><img src="images/main/styling_m_4.png" alt=""></li>
-                        <li><img src="images/main/styling_m_5.png" alt=""></li>
-                        <li><img src="images/main/styling_m_6.png" alt=""></li>
-                        <li><img src="images/main/styling_m_7.png" alt=""></li>
-                        <li><img src="images/main/styling_m_8.png" alt=""></li>
-                    </ul>
+                    <div class="odd">
+                        <ul>
+                            <li><img src="images/main/styling_m_1.png" alt=""></li>
+                            <li><img src="images/main/styling_m_3.png" alt=""></li>
+                            <li><img src="images/main/styling_m_5.png" alt=""></li>
+                            <li><img src="images/main/styling_m_7.png" alt=""></li>
+                        </ul>
+                    </div>
+                    <div class="even">
+                        <ul>
+                            <li><img src="images/main/styling_m_2.png" alt=""></li>
+                            <li><img src="images/main/styling_m_4.png" alt=""></li>
+                            <li><img src="images/main/styling_m_6.png" alt=""></li>
+                            <li><img src="images/main/styling_m_8.png" alt=""></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="text">
-                    <h2>How to Styling?</h2>
+                    <h2>How to<br> Styling?</h2>
                 </div>
                 <button class="more">VIEW MORE</button>
             </section>
@@ -323,15 +354,23 @@
                     <div class="tit"><h2>벽지, 그 이상의 가치 창조</h2></div>
                     <div class="txt_1">
                         <h3>Authentic Craftsmanship</h3>
-                        <p>자연의 소재를 그대로 사용하는 것이 KS벽지의 가장 큰 기술이며, 이는 고집스럽게 한길을 걸어오면서 얻어낸 독보적 자산입니다.<br>
-                            또한, 서로 다른 천연소재가 각각의 속성을 잃지 않고 적절히 배합되어 장인들의 세심한 손끝에서 탄생합니다.</p>
-                        <img src="images/main/material_1.png" alt="">
+                        <p>자연의 소재를 그대로 사용하는 것이 KS벽지의 가장 큰 기술이며,<br class="m_768">
+                            고집스럽게 한길을 걸어오면서 얻어낸 독보적 자산입니다.<br>
+                            또한, 서로 다른 천연소재가 각각의 속성을 잃지 않고<br class="m_768">
+                            적절히 배합되어 장인들의 세심한 손끝에서 탄생합니다.</p>
+                        <div class="photo">
+                            <img src="images/main/material_1.png" alt="">
+                        </div>
                     </div>
                     <div class="txt_2">
                         <h3>Natural Materials</h3>
-                        <p>KS벽지는 천연소재를 사용하여 지속적으로 힐링 하우스에 적합한 자연소재를 사용하고 있습니다.<br>
-                            천연소재와 디자인 기술이 더해진 천연벽지 나무플러스, 벨루체, 방염 등 다채로운 제품이 구성되어 있습니다.</p>
-                        <img src="images/main/material_2.png" alt="">
+                        <p>KS벽지는 천연소재를 사용하여 지속적으로 힐링 하우스에<br class="m_768">
+                            적합한 자연소재를 사용하고 있습니다.<br>
+                            천연소재와 디자인 기술이 더해진 천연벽지 나무플러스,<br class="m_768">
+                            벨루체, 방염 등 다채로운 제품이 구성되어 있습니다.</p>
+                        <div class="photo">
+                            <img src="images/main/material_2.png" alt="">
+                        </div>
                     </div>
                 </div>
             </section>
@@ -343,6 +382,14 @@
                             <li class="swiper-slide">
                                 <a href="#none">
                                     <img src="images/main/news_1.png" alt="">
+                                    <span>2024.04.08</span>
+                                    <h3>㈜케이에스더블유, 신제품 천연벽지<br>
+                                        ‘나무플러스’ 선보여</h3>
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#none">
+                                    <img src="images/main/news_2.png" alt="">
                                     <span>2024.01.03</span>
                                     <h3>KS벽지, 2024 실크벽지 신제품<br>
                                         ‘더뷰(THE VIEW)’ 선봬</h3>
@@ -350,14 +397,14 @@
                             </li>
                             <li class="swiper-slide">
                                 <a href="#none">
-                                    <img src="images/main/news_2.png" alt="">
+                                    <img src="images/main/news_3.png" alt="">
                                     <span>2023.12.04</span>
                                     <h3>KS벽지, 2024 합지벽지 신제품 ‘벨루체’ 출시</h3>
                                 </a>
                             </li>
                             <li class="swiper-slide">
                                 <a href="#none">
-                                    <img src="images/main/news_3.png" alt="">
+                                    <img src="images/main/news_4.png" alt="">
                                     <span>2023.06.26</span>
                                     <h3>KS벽지, 특판 신제품<br>
                                         데코리어(DECORIOR) 출시</h3>
@@ -370,18 +417,18 @@
             </section>
             <footer>
                 <div class="wrapper">
-                    <div class="familysite">
-                        <button>패밀리사이트</button>
-                        <ul>
-                            <li><a href="#none">제일벽지</a></li>
-                            <li><a href="#none">KS더블유</a></li>
-                            <li><a href="#none">오가닉트리</a></li>
-                            <li><a href="#none">코스모스벽지</a></li>
-                            <li><a href="#none">케이엔피물류</a></li>
-                            <li><a href="#none">케이엔피이노텍</a></li>
-                        </ul>
-                    </div>
                     <div class="wrapper2">
+                        <div class="familysite">
+                            <button>패밀리사이트</button>
+                            <ul>
+                                <li><a href="#none">제일벽지</a></li>
+                                <li><a href="#none">KS더블유</a></li>
+                                <li><a href="#none">오가닉트리</a></li>
+                                <li><a href="#none">코스모스벽지</a></li>
+                                <li><a href="#none">케이엔피물류</a></li>
+                                <li><a href="#none">케이엔피이노텍</a></li>
+                            </ul>
+                        </div>
                         <div class="f_inner">
                             <div class="f_txt">
                                 <ul>
@@ -398,8 +445,8 @@
                                     <li>주소: 경기도 이천시 장호원읍 서동대로 8798-50</li>
                                 </ul>
                             </div>
+                            <div class="copyright">© 2022 KSWALLCOVERINGS ALL Rights Reserved.</div>
                         </div>
-                        <div class="copyright">© 2022 KSWALLCOVERINGS ALL Rights Reserved.</div>
                     </div>
                 </div>
             </footer>
