--- a/DIAN/index.html
+++ b/DIAN/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,68 @@
     <title>Dian</title>
 </head>
 <body>
-    
+    <div id="wrap">
+        <header>
+            <div class="left_line">
+                <h1 class="logo"><a href="index.html">로고</a></h1>
+                <nav class="gnb">
+                    <button class="gnb_open">메뉴열기</button>
+                    <div class="gnb_wrap">
+                        <ul class="depth1">
+                            <li class="on">
+                                <a href="#none"><span>회사정보</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#none">회사소개</a></li>
+                                    <li><a href="#none">CONTACT US</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#none"><span>매거진</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#none">뉴스소개</a></li>
+                                    <li><a href="#none">신제품 소식</a></li>
+                                    <li><a href="#none">제품 & 시공</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#none"><span>제품</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#none">전체상품</a></li>
+                                    <li><a href="#none">용도</a></li>
+                                    <li><a href="#none">소재</a></li>
+                                    <li><a href="#none">기능성</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#none"><span>문의</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="gnb_close">메뉴닫기</button>
+                </nav>
+            </div>
+        </header>
+        <div class="container">
+            <div class="tnb">
+                <ul>
+                    <li>
+                        <a href="#none">INSTAGRAM</a>
+                        <a href="#none">YOUTUBE</a>
+                        <a href="#none">BLOG</a>
+                        <a href="#none">LOGIN</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="visual"></div>
+            <section class="magazine"></section>
+            <section class="biz"></section>
+            <section class="showroom"></section>
+            <div class="ctn">
+                <section class="contact"></section>
+                <section class="inquiry"></section>
+            </div>
+            <footer></footer>
+        </div>
+    </div>
 </body>
-</html>l
+</html>
