--- a/DIAN/index.html
+++ b/DIAN/index.html
@@ -21,7 +21,7 @@
                     <button class="gnb_open">메뉴열기</button>
                     <div class="gnb_wrap">
                         <ul class="depth1">
-                            <li class="on">
+                            <li>
                                 <a href="#none"><span>회사정보</span></a>
                                 <ul class="depth2">
                                     <li><a href="#none">회사소개</a></li>
@@ -57,16 +57,106 @@
         <div class="container">
             <div class="tnb">
                 <ul>
-                    <li>
-                        <a href="#none">INSTAGRAM</a>
-                        <a href="#none">YOUTUBE</a>
-                        <a href="#none">BLOG</a>
-                        <a href="#none">LOGIN</a>
-                    </li>
+                    <li><a href="#none">INSTAGRAM</a></li>
+                    <li><a href="#none">YOUTUBE</a></li>
+                    <li><a href="#none">BLOG</a></li>
+                    <li><a href="#none">LOGIN</a></li>
                 </ul>
             </div>
-            <div class="visual"></div>
-            <section class="magazine"></section>
+            <div class="visual">
+                <div class="swiper_pc">
+                    <ul class="swiper-wrapper">
+                        <li class="swiper-slide">
+                            <img src="images/main/visual_1.png" alt="">
+                            <div class="tit">
+                                <h2>PROJECT</h2>
+                                <p>디안은 호텔, 사무실 미군부대, 거주공간 등 많은 프로젝트를 진행하고 있습니다.</p>
+                            </div>
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="images/main/visual_2.png" alt="">
+                            <div class="tit">
+                                <h2>HERITAGE KEEPER</h2>
+                                <p>디안은 40년이 넘도록 원단을 생산하고 있는 전문공장입니다.</p>
+                            </div>
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="images/main/visual_3.png" alt="">
+                            <div class="tit">
+                                <h2>NO.1 TEXTILE BRAND</h2>
+                                <p>디안은 70,000가지 이상의 원단을 보유하고 있습니다.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="swiper_m">
+                    <ul class="swiper-wrapper">
+                        <li>
+                            <img src="images/main/visual_mobile_1.png" alt="">
+                            <div class="tit">
+                                <h2>PROJECT</h2>
+                                <p>디안은 호텔, 사무실 미군부대, 거주공간 등<br>
+                                    많은 프로젝트를 진행하고 있습니다.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/main/visual_mobile_2.png" alt="">
+                            <div class="tit">
+                                <h2>HERITAGE<br>
+                                    KEEPER</h2>
+                                <p>디안은 40년이 넘도록 원단을 생산하고 있는 전문공장입니다.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/main/visual_mobile_3.png" alt="">
+                            <div class="tit">
+                                <h2>NO.1 TEXTILE<br>
+                                    BRAND</h2>
+                                <p>디안은 70,000가지 이상의 원단을 보유하고 있습니다.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <section class="magazine">
+                <div class="grid">
+                    <div class="item tit">
+                        <h2>MAGAZINE</h2>
+                    </div>
+                    <div class="item">
+                        <img src="images/main/magazine_1.png" alt="">
+                        <div class="txt">
+                            <span>Slow and Natural :<br>
+                                메종&오브제에서 찾은 2024 인테리어 트렌드</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/main/magazine_2.png" alt="">
+                        <div class="txt">
+                            <span>24년 광저우 가구전시회,<br>
+                                코엑스의 20배 규모</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/main/magazine_3.png" alt="">
+                        <div class="txt">
+                            <span>2023년 텍스타일 트랜드 한눈에 살펴보기</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/main/magazine_4.png" alt="">
+                        <div class="txt">
+                            <span>디안은 원단 유통회사가 아닙니다.</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/main/magazine_5.png" alt="">
+                        <div class="txt">
+                            <span>2년 빠른 트렌드, 독일 하임텍스틸 전시회</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="biz"></section>
             <section class="showroom"></section>
             <div class="ctn">
