--- a/DIAN/index.html
+++ b/DIAN/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <div id="wrap">
+        <h1 class="logo"><a href="index.html">로고</a></h1>
         <header>
             <div class="left_line">
-                <h1 class="logo"><a href="index.html">로고</a></h1>
                 <nav class="gnb">
                     <button class="gnb_open">메뉴열기</button>
                     <div class="gnb_wrap">
@@ -124,46 +124,231 @@
                         <h2>MAGAZINE</h2>
                     </div>
                     <div class="item">
-                        <img src="images/main/magazine_1.png" alt="">
-                        <div class="txt">
-                            <span>Slow and Natural :<br>
-                                메종&오브제에서 찾은 2024 인테리어 트렌드</span>
+                        <a href="#none">
+                            <img src="images/main/magazine_1.png" alt="">
+                            <div class="txt">
+                                <span>Slow and Natural :<br>
+                                    메종&오브제에서 찾은 2024 인테리어 트렌드</span>
+                        </a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/main/magazine_2.png" alt="">
-                        <div class="txt">
-                            <span>24년 광저우 가구전시회,<br>
-                                코엑스의 20배 규모</span>
+                        <a href="#none">
+                            <img src="images/main/magazine_2.png" alt="">
+                            <div class="txt">
+                                <span>24년 광저우 가구전시회,<br>
+                                    코엑스의 20배 규모</span>
+                        </a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/main/magazine_3.png" alt="">
-                        <div class="txt">
-                            <span>2023년 텍스타일 트랜드 한눈에 살펴보기</span>
+                        <a href="#none">
+                            <img src="images/main/magazine_3.png" alt="">
+                            <div class="txt">
+                                <span>2023년 텍스타일 트랜드 한눈에 살펴보기</span>
+                        </a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/main/magazine_4.png" alt="">
-                        <div class="txt">
-                            <span>디안은 원단 유통회사가 아닙니다.</span>
+                        <a href="#none">
+                            <img src="images/main/magazine_4.png" alt="">
+                            <div class="txt">
+                                <span>디안은 원단 유통회사가 아닙니다.</span>
+                        </a>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/main/magazine_5.png" alt="">
-                        <div class="txt">
-                            <span>2년 빠른 트렌드, 독일 하임텍스틸 전시회</span>
+                        <a href="#none">
+                            <img src="images/main/magazine_5.png" alt="">
+                            <div class="txt">
+                                <span>2년 빠른 트렌드, 독일 하임텍스틸 전시회</span>
+                        </a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="btn">
+                            <button>VIEW MORE</button>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="biz"></section>
-            <section class="showroom"></section>
+            <section class="biz">
+                <div class="flex">
+                    <ul>
+                        <li>
+                            <a href="#none">
+                                <img src="images/main/business_1.png" alt="">
+                                <div class="txt">
+                                    <h3>FUNITURE</h3>
+                                    <p>소파, 쿠션등을 제작하는데<br>
+                                        원단이 사용됩니다.</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#none">
+                                <img src="images/main/business_2.png" alt="">
+                                <div class="txt">
+                                    <h3>BED</h3>
+                                    <p>침대 헤드에 디자인 요소로<br>
+                                        원단이 사용됩니다.</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#none">
+                                <img src="images/main/business_3.png" alt="">
+                                <div class="txt">
+                                    <h3>INTERIOR</h3>
+                                    <p>소비자 의견이 반영되어<br>
+                                        홈스타일링에 쓰입니다.</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#none">
+                                <img src="images/main/business_4.png" alt="">
+                                <div class="txt">
+                                    <h3>HOTEL</h3>
+                                    <p>벽 판넬, 쿠션, 가구 등<br>
+                                        특성에 맞게 사용 됩니다.</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="showroom">
+                <div class="grid">
+                    <div class="item tit">
+                        <h2>SHOWROOM</h2>
+                    </div>
+                    <div class="item">
+                        <a href="#none">
+                            <img src="images/main/showroom_1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="#none">
+                            <img src="images/main/showroom_2.png" alt="">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="#none">
+                            <img src="images/main/showroom_3.png" alt="">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="#none">
+                            <img src="images/main/showroom_4.png" alt="">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a href="#none">
+                            <img src="images/main/showroom_5.png" alt="">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <div class="btn">
+                            <button>VIEW MORE</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="ctn">
-                <section class="contact"></section>
-                <section class="inquiry"></section>
+                <div class="flex">
+                    <section class="contact">
+                        <div class="tit">
+                            <h2>CONTACT</h2>
+                        </div>
+                        <div class="photo">
+                            <img src="images/main/contact_1.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h3>CUSTOMER SERVICE</h3>
+                            <div class="sub_text">
+                                <ul>
+                                    <li><span>PM 10:00 - 17:00 (MON - FRI)</span></li>
+                                    <li><span>BREAK TIME: PM 12:00 - 13:00</span></li>
+                                    <li><span>+82 6447-1221, 1600-1435</span></li>
+                                    <li><span>서울 강남구 학동로 224 3층</span></li>
+                                    <li><span>구매 및 제휴문의: dian@diantex.co.kr</span></li>
+                                    <li><span>기타문의: help@diantex.co.kr</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="inquiry">
+                        <div class="grid">
+                            <div class="item tit">
+                                <h2>PRODUCTION INQUIRY</h2>
+                            </div>
+                            <div class="item">
+                                <a href="#none">
+                                    <img src="images/main/production_1.png" alt="">
+                                    <div class="text">
+                                        <span>준불연 원단<br>
+                                        방염,발수 기능성 원단</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#none">
+                                    <img src="images/main/production_2.png" alt="">
+                                    <div class="text">
+                                        <span>리사이클 원단</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#none">
+                                    <img src="images/main/production_3.png" alt="">
+                                    <div class="text">
+                                        <span>커스텀 제작 원단</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#none">
+                                    <img src="images/main/production_4.png" alt="">
+                                    <div class="text">
+                                        <span>색동<br>
+                                        자카드 직물</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <div class="btn">
+                                    <button>INQUIRY</button>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </div>
-            <footer></footer>
+            <footer>
+                <div class="flex">
+                    <div class="f_text">
+                        <strong>개인정보처리방침</strong>
+                        <span>이용약관</span>
+                    </div>
+                    <div class="f_info">
+                        <ul>
+                            <li>기업은행 026-447-1221 예금주 : 한태원</li>
+                            <li>본사주소 서울 강남구 학동로 224 (삼환아르누보3) 3F</li>
+                            <li>공장주소 충남 공주시 유구읍 녹천리 54-1</li>
+                        </ul>
+                    </div>
+                    <div class="f_sns">
+                        <ul>
+                            <li>INSTAGRAM</li>
+                            <li>YOUTUBE</li>
+                            <li>BLOG</li>
+                        </ul>
+                    </div>
+                    <div class="copyright">Copyright 2024 DIAN All rights reserved.</div>
+                </div>
+            </footer>
         </div>
     </div>
 </body>
